--- a/ittehad.css
+++ b/ittehad.css
@@ -1,6 +1,6 @@
 
    
-    h1 {
+   .viewh1 {
       text-align: center;
       margin: 15px 0;
       font-size: 20px;
@@ -35,11 +35,13 @@
     .item h2 {
       margin: 0;
       font-size: 16px;
+       color: #32CD32;
       font-weight: bold;
     }
     .item p {
       margin: 4px 0 0;
-      font-size: 11px;
+      font-size: 18px;
+       color: #ddd;
       font-weight: 500;
     }
     @media (max-width: 500px) {
