--- a/ittehad.css
+++ b/ittehad.css
@@ -12,6 +12,7 @@
       margin: 0 0;
       background: #ffffff;
       border-radius: 10px;
+       border: 1px solid #32CD32;
       box-shadow: 0 3px 8px rgba(0,0,0,0.1);
       padding: 8px;
       display: grid;
@@ -21,6 +22,7 @@
     .item {
       background: #F4FFF0;
       border-radius: 8px;
+       border: 1px solid #32CD32;
       padding: 15px 5px;
       text-align: center;
       box-shadow: 0 1px 3px rgba(0,0,0,0.08);
